--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -6,21 +6,21 @@ on:
       working-directory:
         required: true
         type: string
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
 
 jobs:
-  apply:
+  terraform-apply:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ${{ inputs.working-directory }}
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: hashicorp/setup-terraform@v3
-
-      - name: Download plan artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: terraform-plan
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Terraform Apply
-        run: terraform apply -input=false tfplan
+        run: terraform -chdir=${{ inputs.working-directory }} apply -input=false tfplan
