--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -6,16 +6,21 @@ on:
       working-directory:
         required: true
         type: string
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
 
 jobs:
-  destroy:
+  terraform-destroy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ${{ inputs.working-directory }}
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: hashicorp/setup-terraform@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Terraform Destroy
-        run: terraform destroy -auto-approve
+        run: terraform -chdir=${{ inputs.working-directory }} destroy -auto-approve
