--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -6,27 +6,25 @@ on:
       working-directory:
         required: true
         type: string
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
 
 jobs:
-  plan:
+  terraform-plan:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ${{ inputs.working-directory }}
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: hashicorp/setup-terraform@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Terraform Plan
-        run: terraform plan -input=false -out=tfplan
+        run: |
+          terraform -chdir=${{ inputs.working-directory }} plan -input=false -out=tfplan
 
       - name: Show Plan Output
-        run: terraform show -no-color tfplan > plan.txt
-
-      - name: Upload plan output
-        uses: actions/upload-artifact@v4
-        with:
-          name: terraform-plan
-          path: |
-            tfplan
-            plan.txt
+        run: terraform -chdir=${{ inputs.working-directory }} show -no-color tfplan
