Add Terraform setup step to all reusable workflows

--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -22,5 +22,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.8.5
+
       - name: Terraform Apply
         run: terraform -chdir=${{ inputs.working-directory }} apply -input=false tfplan
