--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.8.5
+
       - name: Terraform Init
         run: |
           terraform -chdir=${{ inputs.working-directory }} init -input=false
