--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.8.5
+        
       - name: Terraform Plan
         run: |
           terraform -chdir=${{ inputs.working-directory }} plan -input=false -out=tfplan
