--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -39,4 +39,4 @@ jobs:
         run: terraform init -input=false
 
       - name: Terraform Apply
-        run: terraform apply -input=false -auto-approve
+        run: terraform -chdir=${{ inputs.working-directory }} apply -auto-approve tfplan
