--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -39,4 +39,4 @@ jobs:
         run: terraform init -input=false
 
       - name: Terraform Destroy
-        run: terraform destroy -input=false -auto-approve
+        run: terraform -chdir=${{ inputs.working-directory }} destroy -auto-approve
