--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -28,5 +28,8 @@ jobs:
         with:
           terraform_version: 1.9.0
 
+      - name: Terraform Init
+        run: terraform -chdir=${{ inputs.working-directory }} init -input=false -reconfigure
+
       - name: Terraform Plan
         run: terraform -chdir=${{ inputs.working-directory }} plan -input=false -out=tfplan
