--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -39,4 +39,4 @@ jobs:
         run: terraform -chdir=${{ inputs.working-directory }} init -input=false -reconfigure
 
       - name: Terraform Apply
-        run: terraform -chdir=${{ inputs.working-directory }} apply -auto-approve tfplan
+        run: terraform -chdir=${{ inputs.working-directory }} apply -input=false -auto-approve -var-file=terraform.tfvars
