--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -32,4 +32,4 @@ jobs:
         run: terraform -chdir=${{ inputs.working-directory }} init -input=false -reconfigure
 
       - name: Terraform Plan
-        run: terraform -chdir=${{ inputs.working-directory }} plan -input=false -var-file=terraform.tfvars -out=tfplan
+        run: terraform -chdir=${{ inputs.working-directory }} plan -input=false -var-file=${{ inputs.working-directory }}/terraform.tfvars -out=tfplan
