--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -19,6 +19,10 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+    defaults:
+      run:
+        working-directory: ${{ inputs.working-directory }}
+
     steps:
       - name: Checkout full repo
         uses: actions/checkout@v4
@@ -29,7 +33,13 @@ jobs:
           terraform_version: 1.9.0
 
       - name: Terraform Init
-        run: terraform -chdir=${{ inputs.working-directory }} init -input=false -reconfigure
+        run: terraform init -input=false -reconfigure
 
       - name: Terraform Plan
-        run: terraform -chdir=${{ inputs.working-directory }} plan -input=false -var-file=${{ inputs.working-directory }}/terraform.tfvars -out=tfplan
+        run: terraform plan -input=false -var-file=${{ inputs.working-directory }}/terraform.tfvars -out=tfplan
+      
+      - name: Upload tfplan artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: tfplan
+          path: tfplan
