--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -36,7 +36,7 @@ jobs:
         run: terraform init -input=false -reconfigure
 
       - name: Terraform Plan
-        run: terraform plan -input=false -var-file=${{ inputs.working-directory }}/terraform.tfvars -out=tfplan
+        run: terraform plan -input=false -var-file=terraform.tfvars -out=tfplan
       
       - name: Upload tfplan artifact
         uses: actions/upload-artifact@v4
